- trained rgb model but val loss very high

--- a/s3d.ipynb
+++ b/s3d.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "\n",
-    "from torchvision.models.video import s3d, S3D_Weights\n",
+    "# from torchvision.models.video import s3d, S3D_Weights\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -35,8 +35,8 @@
     "# Resolved 6. add logging & save model\n",
     "# Resolved 7. not whole dataset is used currently only testing samples\n",
     "# Resolved 8. save logged results in pth file\n",
-    "# 9. test adamw\n",
-    "# 10. print running loss & acc since using less epochs\n",
+    "# Resolved 9. test adamw\n",
+    "# Resolved 10. print running loss & acc since using less epochs\n",
     "# - save batch results as 2d array\n",
     "# - save batch results into model file\n",
     "# 11. train optical flow model - Nic\n",
@@ -824,61 +824,6 @@
       "Input Shape: torch.Size([5, 3, 150, 256, 256])\n",
       "label Shape: torch.Size([5])\n",
       "Epoch 1/15\n",
-      "83/83 - Time Taken: 7.863010617097219 - train_loss: 0.6695 - train_accuracy: 64.0097% - val_loss: 0.6371 - val_accuracy: 68.2692%\n",
-      "Epoch 2/15\n",
-      "83/83 - Time Taken: 7.473371533552806 - train_loss: 0.6102 - train_accuracy: 65.7005% - val_loss: 0.6645 - val_accuracy: 68.2692%\n",
-      "Epoch 3/15\n",
-      "83/83 - Time Taken: 7.978231370449066 - train_loss: 0.5769 - train_accuracy: 69.8068% - val_loss: 0.6873 - val_accuracy: 68.2692%\n",
-      "Epoch 4/15\n",
-      "83/83 - Time Taken: 7.86268583536148 - train_loss: 0.5523 - train_accuracy: 71.7391% - val_loss: 0.7038 - val_accuracy: 67.3077%\n",
-      "Epoch 5/15\n",
-      "83/83 - Time Taken: 7.607266898949941 - train_loss: 0.5322 - train_accuracy: 72.4638% - val_loss: 0.7085 - val_accuracy: 67.3077%\n",
-      "Epoch 6/15\n",
-      "83/83 - Time Taken: 7.823669620354971 - train_loss: 0.5218 - train_accuracy: 73.4300% - val_loss: 0.7133 - val_accuracy: 68.2692%\n",
-      "Epoch 7/15\n",
-      "83/83 - Time Taken: 7.821432507038116 - train_loss: 0.5041 - train_accuracy: 73.9130% - val_loss: 0.7184 - val_accuracy: 68.2692%\n",
-      "Epoch 8/15\n",
-      "83/83 - Time Taken: 7.742730430761973 - train_loss: 0.4936 - train_accuracy: 75.3623% - val_loss: 0.7241 - val_accuracy: 68.2692%\n",
-      "Epoch 9/15\n",
-      "83/83 - Time Taken: 7.715534436702728 - train_loss: 0.4850 - train_accuracy: 75.6039% - val_loss: 0.7370 - val_accuracy: 68.2692%\n",
-      "Epoch 10/15\n",
-      "83/83 - Time Taken: 8.209038849671682 - train_loss: 0.4746 - train_accuracy: 76.0870% - val_loss: 0.7464 - val_accuracy: 68.2692%\n",
-      "Epoch 11/15\n",
-      "83/83 - Time Taken: 8.113072129090627 - train_loss: 0.4670 - train_accuracy: 77.0531% - val_loss: 0.7556 - val_accuracy: 68.2692%\n",
-      "Epoch 12/15\n",
-      "83/83 - Time Taken: 8.136986656983693 - train_loss: 0.4598 - train_accuracy: 77.5362% - val_loss: 0.7579 - val_accuracy: 68.2692%\n",
-      "Epoch 13/15\n",
-      "83/83 - Time Taken: 7.870969092845916 - train_loss: 0.4510 - train_accuracy: 78.5024% - val_loss: 0.7628 - val_accuracy: 68.2692%\n",
-      "Epoch 14/15\n",
-      "83/83 - Time Taken: 8.173083635171254 - train_loss: 0.4432 - train_accuracy: 78.2609% - val_loss: 0.7719 - val_accuracy: 68.2692%\n",
-      "Epoch 15/15\n",
-      "83/83 - Time Taken: 8.114362219969431 - train_loss: 0.4334 - train_accuracy: 78.2609% - val_loss: 0.7759 - val_accuracy: 69.2308%\n"
-     ]
-    }
-   ],
-   "source": [
-    "# freeze + test dataset\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "dataset_path = \"data\"\n",
-    "batch_size = 5\n",
-    "epochs = 15\n",
-    "train_log, val_log = train_s3d(dataset_path,batch_size,device,epochs) # 7.8GB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training size: 414\n",
-      "Validation size: 104\n",
-      "Input Shape: torch.Size([5, 3, 150, 256, 256])\n",
-      "label Shape: torch.Size([5])\n",
-      "Epoch 1/15\n",
       "83/83 - Time Taken: 8.326953609784445 - train_loss: 0.5672 - train_accuracy: 65.4589% - val_loss: 0.6093 - val_accuracy: 62.5000%\n",
       "Epoch 2/15\n",
       "83/83 - Time Taken: 8.073602823416392 - train_loss: 0.5251 - train_accuracy: 66.4251% - val_loss: 0.6106 - val_accuracy: 62.5000%\n",
@@ -976,61 +921,6 @@
     "dataset_path = \"data\"\n",
     "batch_size = 5\n",
     "epochs = 10\n",
-    "train_log, val_log = train_s3d(dataset_path,batch_size,device,epochs) # 7.5GB lr=1e-3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training size: 414\n",
-      "Validation size: 104\n",
-      "Input Shape: torch.Size([5, 3, 150, 256, 256])\n",
-      "label Shape: torch.Size([5])\n",
-      "Epoch 1/15\n",
-      "83/83 - Time Taken: 8.346607466538748 - train_loss: 0.5701 - train_accuracy: 65.7005% - val_loss: 0.6929 - val_accuracy: 59.6154%\n",
-      "Epoch 2/15\n",
-      "83/83 - Time Taken: 7.770534221331278 - train_loss: 0.5126 - train_accuracy: 68.3575% - val_loss: 0.6569 - val_accuracy: 59.6154%\n",
-      "Epoch 3/15\n",
-      "83/83 - Time Taken: 7.864552410443624 - train_loss: 0.4873 - train_accuracy: 69.5652% - val_loss: 0.6444 - val_accuracy: 59.6154%\n",
-      "Epoch 4/15\n",
-      "83/83 - Time Taken: 8.078662701447804 - train_loss: 0.4690 - train_accuracy: 70.5314% - val_loss: 0.6418 - val_accuracy: 59.6154%\n",
-      "Epoch 5/15\n",
-      "83/83 - Time Taken: 7.862513927618663 - train_loss: 0.4516 - train_accuracy: 71.4976% - val_loss: 0.6513 - val_accuracy: 59.6154%\n",
-      "Epoch 6/15\n",
-      "83/83 - Time Taken: 8.239874053001405 - train_loss: 0.4375 - train_accuracy: 72.9469% - val_loss: 0.6619 - val_accuracy: 59.6154%\n",
-      "Epoch 7/15\n",
-      "83/83 - Time Taken: 7.825394181410472 - train_loss: 0.4249 - train_accuracy: 74.3961% - val_loss: 0.6678 - val_accuracy: 59.6154%\n",
-      "Epoch 8/15\n",
-      "83/83 - Time Taken: 7.965377283096314 - train_loss: 0.4147 - train_accuracy: 74.6377% - val_loss: 0.6769 - val_accuracy: 59.6154%\n",
-      "Epoch 9/15\n",
-      "83/83 - Time Taken: 7.902672262986501 - train_loss: 0.4057 - train_accuracy: 75.3623% - val_loss: 0.6854 - val_accuracy: 60.5769%\n",
-      "Epoch 10/15\n",
-      "83/83 - Time Taken: 8.131046636899312 - train_loss: 0.3975 - train_accuracy: 76.5700% - val_loss: 0.6956 - val_accuracy: 60.5769%\n",
-      "Epoch 11/15\n",
-      "83/83 - Time Taken: 8.392621366182963 - train_loss: 0.3907 - train_accuracy: 76.0870% - val_loss: 0.7047 - val_accuracy: 60.5769%\n",
-      "Epoch 12/15\n",
-      "83/83 - Time Taken: 8.216236551602682 - train_loss: 0.3836 - train_accuracy: 77.2947% - val_loss: 0.7139 - val_accuracy: 60.5769%\n",
-      "Epoch 13/15\n",
-      "83/83 - Time Taken: 8.208768900235494 - train_loss: 0.3759 - train_accuracy: 78.2609% - val_loss: 0.7193 - val_accuracy: 59.6154%\n",
-      "Epoch 14/15\n",
-      "83/83 - Time Taken: 8.379486751556396 - train_loss: 0.3706 - train_accuracy: 78.7440% - val_loss: 0.7282 - val_accuracy: 59.6154%\n",
-      "Epoch 15/15\n",
-      "83/83 - Time Taken: 7.649915262063344 - train_loss: 0.3648 - train_accuracy: 79.4686% - val_loss: 0.7335 - val_accuracy: 59.6154%\n"
-     ]
-    }
-   ],
-   "source": [
-    "# freeze + adamw + scaled + test dataset\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "dataset_path = \"data\"\n",
-    "batch_size = 5\n",
-    "epochs = 15\n",
     "train_log, val_log = train_s3d(dataset_path,batch_size,device,epochs) # 7.5GB lr=1e-3"
    ]
   },
@@ -1151,6 +1041,111 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training size: 6011\n",
+      "Validation size: 518\n",
+      "Input Shape: torch.Size([2, 3, 150, 256, 256])\n",
+      "label Shape: torch.Size([2])\n",
+      "Epoch 1/3\n",
+      "200/3006 - Time Taken: 7.89 - train_loss: 0.3211 - train_accuracy: 82.5000%\n",
+      "400/3006 - Time Taken: 7.83 - train_loss: 0.2627 - train_accuracy: 84.8750%\n",
+      "600/3006 - Time Taken: 12.95 - train_loss: 0.2338 - train_accuracy: 85.7500%\n",
+      "800/3006 - Time Taken: 6.77 - train_loss: 0.2105 - train_accuracy: 87.0000%\n",
+      "1000/3006 - Time Taken: 6.68 - train_loss: 0.2112 - train_accuracy: 87.0000%\n",
+      "1200/3006 - Time Taken: 6.67 - train_loss: 0.1972 - train_accuracy: 87.5833%\n",
+      "1400/3006 - Time Taken: 6.64 - train_loss: 0.1935 - train_accuracy: 87.5714%\n",
+      "1600/3006 - Time Taken: 6.66 - train_loss: 0.1893 - train_accuracy: 87.4688%\n",
+      "1800/3006 - Time Taken: 6.64 - train_loss: 0.1907 - train_accuracy: 87.6111%\n",
+      "2000/3006 - Time Taken: 6.63 - train_loss: 0.1906 - train_accuracy: 87.8250%\n",
+      "2200/3006 - Time Taken: 6.62 - train_loss: 0.1854 - train_accuracy: 88.0000%\n",
+      "2400/3006 - Time Taken: 6.64 - train_loss: 0.1870 - train_accuracy: 88.1667%\n",
+      "2600/3006 - Time Taken: 6.64 - train_loss: 0.1893 - train_accuracy: 87.9038%\n",
+      "2800/3006 - Time Taken: 6.67 - train_loss: 0.1845 - train_accuracy: 88.0179%\n",
+      "3000/3006 - Time Taken: 6.69 - train_loss: 0.1846 - train_accuracy: 87.9833%\n",
+      "3006/3006 - Time Taken: 115.90 - train_loss: 0.1844 - train_accuracy: 87.9887% - val_loss: 310.0302 - val_accuracy: 34.3629%\n",
+      "Epoch 2/3\n",
+      "200/3006 - Time Taken: 6.82 - train_loss: 0.2673 - train_accuracy: 83.7500%\n",
+      "400/3006 - Time Taken: 6.62 - train_loss: 0.2262 - train_accuracy: 85.5000%\n",
+      "600/3006 - Time Taken: 6.66 - train_loss: 0.2081 - train_accuracy: 86.1667%\n",
+      "800/3006 - Time Taken: 6.65 - train_loss: 0.1898 - train_accuracy: 87.3125%\n",
+      "1000/3006 - Time Taken: 6.69 - train_loss: 0.1906 - train_accuracy: 87.5000%\n",
+      "1200/3006 - Time Taken: 6.66 - train_loss: 0.1809 - train_accuracy: 88.0000%\n",
+      "1400/3006 - Time Taken: 6.63 - train_loss: 0.1787 - train_accuracy: 87.9286%\n",
+      "1600/3006 - Time Taken: 6.68 - train_loss: 0.1765 - train_accuracy: 87.7812%\n",
+      "1800/3006 - Time Taken: 6.65 - train_loss: 0.1786 - train_accuracy: 87.8889%\n",
+      "2000/3006 - Time Taken: 6.64 - train_loss: 0.1785 - train_accuracy: 88.0750%\n",
+      "2200/3006 - Time Taken: 6.62 - train_loss: 0.1742 - train_accuracy: 88.2273%\n",
+      "2400/3006 - Time Taken: 6.65 - train_loss: 0.1762 - train_accuracy: 88.3750%\n",
+      "2600/3006 - Time Taken: 6.64 - train_loss: 0.1791 - train_accuracy: 88.0962%\n",
+      "2800/3006 - Time Taken: 6.67 - train_loss: 0.1748 - train_accuracy: 88.1964%\n",
+      "3000/3006 - Time Taken: 6.68 - train_loss: 0.1755 - train_accuracy: 88.1500%\n",
+      "3006/3006 - Time Taken: 107.19 - train_loss: 0.1753 - train_accuracy: 88.1550% - val_loss: 52.9452 - val_accuracy: 65.6371%\n",
+      "Epoch 3/3\n",
+      "200/3006 - Time Taken: 6.78 - train_loss: 0.2650 - train_accuracy: 83.7500%\n",
+      "400/3006 - Time Taken: 6.65 - train_loss: 0.2283 - train_accuracy: 85.5000%\n",
+      "600/3006 - Time Taken: 6.68 - train_loss: 0.2073 - train_accuracy: 86.1667%\n",
+      "800/3006 - Time Taken: 6.66 - train_loss: 0.1897 - train_accuracy: 87.3125%\n",
+      "1000/3006 - Time Taken: 6.68 - train_loss: 0.1905 - train_accuracy: 87.5000%\n",
+      "1200/3006 - Time Taken: 6.67 - train_loss: 0.1800 - train_accuracy: 88.0000%\n",
+      "1400/3006 - Time Taken: 6.64 - train_loss: 0.1778 - train_accuracy: 87.9286%\n",
+      "1600/3006 - Time Taken: 6.69 - train_loss: 0.1752 - train_accuracy: 87.7812%\n",
+      "1800/3006 - Time Taken: 6.72 - train_loss: 0.1759 - train_accuracy: 87.8889%\n",
+      "2000/3006 - Time Taken: 6.64 - train_loss: 0.1754 - train_accuracy: 88.0750%\n",
+      "2200/3006 - Time Taken: 6.61 - train_loss: 0.1714 - train_accuracy: 88.2273%\n",
+      "2400/3006 - Time Taken: 6.67 - train_loss: 0.1733 - train_accuracy: 88.3750%\n",
+      "2600/3006 - Time Taken: 6.64 - train_loss: 0.1764 - train_accuracy: 88.0962%\n",
+      "2800/3006 - Time Taken: 6.69 - train_loss: 0.1723 - train_accuracy: 88.1964%\n",
+      "3000/3006 - Time Taken: 6.70 - train_loss: 0.1730 - train_accuracy: 88.1500%\n",
+      "3006/3006 - Time Taken: 107.19 - train_loss: 0.1729 - train_accuracy: 88.1550% - val_loss: 136.7230 - val_accuracy: 65.6371%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# freeze + adamw + scaled + test dataset + bigger weight decay\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "dataset_path = \"data\"\n",
+    "batch_size = 2\n",
+    "epochs = 3\n",
+    "train_log, val_log = train_s3d(dataset_path,batch_size,device,epochs) # 7.5GB lr=1e-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training size: 6011\n",
+      "Validation size: 518\n",
+      "Input Shape: torch.Size([2, 3, 150, 256, 256])\n",
+      "label Shape: torch.Size([2])\n",
+      "Epoch 1/1\n",
+      "200/3006 - Time Taken: 7.78 - train_loss: 0.2345 - train_accuracy: 84.5000%\n",
+      "24865.375030517578 259\n",
+      "3006/3006 - Time Taken: 15.32 - train_loss: 0.0156 - train_accuracy: 84.5000% - val_loss: 96.0053 - val_accuracy: 65.6371%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# freeze + adamw + scaled + test dataset + bigger weight decay\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "dataset_path = \"data\"\n",
+    "batch_size = 2\n",
+    "epochs = 1\n",
+    "train_log, val_log = train_s3d(dataset_path,batch_size,device,epochs) # 7.5GB lr=1e-3"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1159,25 +1154,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0.5708587419196783, 0.644927536231884), (0.5204621878374054, 0.6714975845410628)]\n",
-      "[(0.5933842531272343, 0.6346153846153846), (0.5443741040570396, 0.6634615384615384)]\n",
-      "(2, 8, 2)\n",
-      "[[1.73502472 0.56      ]\n",
-      " [1.65123171 0.6       ]\n",
-      " [1.5873554  0.65333333]\n",
-      " [1.57450471 0.66      ]\n",
-      " [1.57307165 0.664     ]\n",
-      " [1.5649849  0.67      ]\n",
-      " [1.57317244 0.65142857]\n",
-      " [1.57852268 0.6475    ]]\n",
-      "(0,)\n"
+      "[(0.18443034832701657, 0.8798868740642156), (0.1753370978411582, 0.8815504907669273), (0.172850799326384, 0.8815504907669273)]\n",
+      "[(310.0301609996663, 0.3436293436293436), (52.945222125550494, 0.6563706563706564), (136.72297379777237, 0.6563706563706564)]\n",
+      "(3, 15, 2)\n",
+      "[[0.32108376 0.825     ]\n",
+      " [0.26271197 0.84875   ]\n",
+      " [0.23377115 0.8575    ]\n",
+      " [0.21053141 0.87      ]\n",
+      " [0.21116178 0.87      ]\n",
+      " [0.19724431 0.87583333]\n",
+      " [0.19346908 0.87571429]\n",
+      " [0.1893199  0.8746875 ]\n",
+      " [0.19065804 0.87611111]\n",
+      " [0.19062062 0.87825   ]\n",
+      " [0.18540285 0.88      ]\n",
+      " [0.1870205  0.88166667]\n",
+      " [0.18934434 0.87903846]\n",
+      " [0.1844948  0.88017857]\n",
+      " [0.18457215 0.87983333]]\n"
      ]
     }
    ],
@@ -1196,15 +1197,11 @@
     "train_log = checkpoint['train']\n",
     "val_log = checkpoint['val']\n",
     "train_run = np.array(checkpoint['train_run'])\n",
-    "val_run = np.array(checkpoint['val_run'])\n",
     "\n",
     "print(train_log)\n",
     "print(val_log)\n",
     "print(train_run.shape)\n",
-    "print(train_run[0])\n",
-    "\n",
-    "print(val_run.shape)\n",
-    "# print(train_run[0])"
+    "print(train_run[0])"
    ]
   }
  ],
