--- a/Light_Yagami.ipynb
+++ b/Light_Yagami.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "**Members:**\n",
     "1. Tan Chien Yuan (29940729)\n",
-    "2. "
+    "2. Alex Hew Hoong-Ming (21111359)"
    ]
   },
   {
@@ -83,18 +83,18 @@
     "# Resolved 10. print running loss & acc since using less epochs\n",
     "# Resolved - save batch results as 2d array\n",
     "# Resolved - save batch results into model file\n",
-    "# 11. train rgb model - Nic\n",
     "# Resolved 12. train optical flow model - Nic\n",
-    "# 13. ensemble learning - Alex\n",
     "# Resolved 14. plot results - Nic\n",
     "# Resolved 15. confusion matrix - Nic\n",
+    "# Resolved 20. save cm for trainining dataset into utils\n",
+    "# Resolved 21. check model loading code for inferencing\n",
+    "\n",
+    "# 11. train rgb model - Nic\n",
+    "# 13. ensemble learning - Alex\n",
     "# 16. test on sadtalker\n",
     "# 17. write descriptions for notebook\n",
     "# 18. updated full ed post\n",
     "# 19. video\n",
-    "\n",
-    "# Resolved 20. save cm for trainining dataset into utils\n",
-    "# 21. check model loading code for inferencing \n",
     "\n",
     "# optical flow\n",
     "# Resolved 1. resize to 256,256\n",
@@ -1464,7 +1464,7 @@
     "plt.plot(epochs, train_losses, label='Training Loss', marker='o', color='r')\n",
     "plt.plot(epochs, val_losses, label='Validation Loss', marker='o', color='g')\n",
     "plt.xticks(epochs)\n",
-    "plt.title('Flow Model Loss')\n",
+    "plt.title('RGB Model Loss')\n",
     "plt.xlabel('Epoch')\n",
     "plt.ylabel('Loss')\n",
     "plt.grid(True)\n",
@@ -1475,7 +1475,7 @@
     "plt.plot(epochs, train_accuracies, label='Training Accuracy', marker='o', color='b')\n",
     "plt.plot(epochs, val_accuracies, label='Validation Accuracy', marker='o', color='orange')\n",
     "plt.xticks(epochs)\n",
-    "plt.title('Flow Model Accuracy')\n",
+    "plt.title('RGB Model Accuracy')\n",
     "plt.xlabel('Epoch')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.grid(True)\n",
